works in single threading, doesn't in multithread

--- a/balrog/config/config.yaml
+++ b/balrog/config/config.yaml
@@ -1,5 +1,5 @@
 agent: 
-  type: naive            # Type of agent to use (e.g., 'naive', 'cot', etc.)
+  type: adas            # Type of agent to use (e.g., 'naive', 'cot', etc.)
   remember_cot: True     # Whether the agent should remember its reasoning across turns
   max_text_history: 16   # Maximum number of text messages to keep in the history
   max_image_history: 0   # Maximum number of images to keep in the history
@@ -7,10 +7,65 @@ agent:
   max_icl_history: 1000   # Maximum number of ICL steps to keep in history (if using 'few_shot' type of agent)
   cache_icl: False
 
+adas:
+  base_agents_path: "base_agents" # The path of the base agents
+  agents_archive: "agents"   # The path to the archive of agents that either will be created, or have been created, subdir of results
+  agents_from: null      # The path to the agents to be evaluated
+  error_budget: 5
+  num_training_episodes: 1 
+  num_env_episodes_per_training_episodes:
+    nle: 1
+    minihack: 1
+    babyai: 1
+    crafter: 1
+    babaisai: 1
+    textworld: 1
+  envs:
+    names: babyai-babaisai-textworld-crafter-nle-minihack   # Environments to evaluate, separated by hyphens
+    env_kwargs:
+      seed: null                # Random seed; null means a random seed is used
+    nle_kwargs:
+      character: "@"            # Character representing the agent in NLE
+      max_episode_steps: 10_000  # Max steps per episode in NLE
+      no_progress_timeout: 15    # Timeout for no progress in NLE
+      savedir: null               # Directory to save NLE data; null disables saving
+      save_ttyrec_every: 0        # Frequency of saving TTY recordings
+      skip_more: True            # Whether to skip the 'more' prompt in NLE
+    minihack_kwargs: 
+      character: "@"
+      max_episode_steps: 10
+      penalty_step: -0.01         
+      penalty_time: 0.0           
+      penalty_mode: constant      
+      savedir: null
+      save_ttyrec_every: 0
+      autopickup: False           
+      skip_more: True
+    babyai_kwargs:
+      num_dists: 0                
+    crafter_kwargs:
+      area: [64, 64]              
+      view: [9, 9]                
+      size: [256, 256]            # Image size in Crafter
+      reward: True                            
+      seed: null                  
+      max_episode_steps: 200     
+    textworld_kwargs:
+      objective: True             
+      description: True           
+      score: True                 
+      max_score: True             
+      won: True                   
+      max_episode_steps: 20       
+      textworld_games_path: tw_games  
+    babaisai_kwargs: 
+      add_ruleset: True
+
+
 eval:
   output_dir: "results"  # Directory where evaluation results will be saved
   resume_from: null      # Path to to the incomplete results file to resume an incomplete run
-  num_workers: 16        # Number of parallel workers. Increase for faster evaluation if you have enough resources
+  num_workers: 1        # Number of parallel workers. Increase for faster evaluation if you have enough resources
   num_episodes:          # Minimum number of episodes to run for each environment. You can optionally increase this to get more reliable results
     nle: 5               # Number of episodes for the 'nle' environment
     minihack: 5          # Number of episodes for each 'minihack' task
@@ -26,12 +81,12 @@ eval:
   feedback_on_invalid_action : True       # Whether to provide feedback on invalid actions
 
 client:
-  client_name: openai           # LLM client to use (e.g., 'openai', 'gemini', 'claude')
-  model_id: gpt-4o              # Model identifier (e.g., 'gpt-4', 'gpt-3.5-turbo')
+  client_name: gemini           # LLM client to use (e.g., 'openai', 'gemini', 'claude')
+  model_id: gemini-2.5-flash-preview-05-20 # Model identifier (e.g., 'gpt-4', 'gpt-3.5-turbo')
   base_url: http://localhost:8080/v1   # Base URL for the API (if using a local server)
   generate_kwargs:
     temperature: 1.0            # Sampling temperature. If null the API default temperature is used instead
-    max_tokens: 4096            # Max tokens to generate in the response
+    max_tokens: 16384            # Max tokens to generate in the response
   timeout: 60                   # Timeout for API requests in seconds
   max_retries: 5                # Max number of retries for failed API calls
   delay: 2                      # Exponential backoff factor between retries in seconds
